# uhlp-solver

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  conanfile.txt  main  main.cpp
include/: parameter.h  particle.h  swarm.h
instances/ap/: ap10L.txt  ap10T.txt  ap20L.txt  ap20T.txt  ap25L.txt  ap25T.txt  ap40L.txt  ap40T.txt  ap50L.txt  ap50T.txt
instances/cab/: cab10.txt  cab15.txt  cab20.txt  cab25.txt
instances/rand/: rand10.txt  rand10_2.txt  rand11.txt  rand110.txt  rand11_2.txt  rand12.txt  rand120.txt  rand12_2.txt  rand13.txt  rand130.txt  rand13_2.txt  rand14.txt  rand140.txt  rand14_2.txt  rand15.txt  rand150.txt  rand15_2.txt  rand16.txt  rand160.txt  rand16_2.txt  rand17.txt  rand170.txt  rand17_2.txt  rand18.txt  rand180.txt  rand18_2.txt  rand19.txt  rand190.txt  rand19_2.txt  rand20.txt  rand200.txt  rand20_2.txt  rand21.txt  rand21_2.txt  rand22.txt  rand22_2.txt  rand23.txt  rand23_2.txt  rand24.txt  rand24_2.txt  (+29 more)
lib/: .parameter.cpp.swp  main.cpp  parameter.cpp  particle.cpp  swarm.cpp
src/: CMakeLists.txt  main.cpp
src/parameter/: parameter_reader.cpp  parameter_reader.hpp
tests/: CMakeLists.txt  main.cpp
